--- a/frontEnd/pages/Login/login.html
+++ b/frontEnd/pages/Login/login.html
@@ -26,6 +26,6 @@
             <a class="login__link" id="linkCreateAccount">Create a new account</a>
         </div>
     </form>
-    <script src="../../scripts/validation.js"></script>
+    <script src="../../scripts/loginValidation.js"></script>
 </body>
 </html>
